log
Fri 10 Mar 2023 12:05:04 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
240194f
Fri 10 Mar 2023 12:16:19 PM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘cmp’:
exercises.c:36:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   36 |     return 1;
      |            ^
exercises.c:29:6: note: declared here
   29 | void cmp(const void *Pv, const void *El)
      |      ^~~
exercises.c:38:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   38 |   return 0;
      |          ^
exercises.c:29:6: note: declared here
   29 | void cmp(const void *Pv, const void *El)
      |      ^~~
exercises.c: In function ‘arrayMaxMin’:
exercises.c:42:25: error: passing argument 4 of ‘qsort’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   42 |   qsort(a,n,sizeof(int),cmp);
      |                         ^~~
      |                         |
      |                         void (*)(const void *, const void *)
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:839:34: note: expected ‘__compar_fn_t’ {aka ‘int (*)(const void *, const void *)’} but argument is of type ‘void (*)(const void *, const void *)’
  839 |                    __compar_fn_t __compar) __nonnull ((1, 4));
      |                    ~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
712a203
Fri 10 Mar 2023 12:16:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
530483c
Sat 11 Mar 2023 04:23:24 PM UTC: 
 tests:  2|5
total_score: 20/70
457bf7d
Fri 17 Mar 2023 11:23:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:21: error: ‘p’ is a pointer; did you mean to use ‘->’?
   65 |   scanf("%s[29\n]",p.nombre);
      |                     ^
      |                     ->
Compilation failed
4a715d0
Fri 17 Mar 2023 11:23:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   65 |   scanf("%s[29\n]",p -> nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8bb3d95
Fri 17 Mar 2023 11:24:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   65 |   scanf("%c[29\n]",p -> nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f25f438
Fri 17 Mar 2023 11:24:37 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:22: error: ‘p’ is a pointer; did you mean to use ‘->’?
   65 |   scanf("%s[29\n]",&p.nombre);
      |                      ^
      |                      ->
Compilation failed
0274f11
Fri 17 Mar 2023 11:24:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:11: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘char (*)[30]’ [-Werror=format=]
   65 |   scanf("%s[29\n]",&p->nombre);
      |          ~^        ~~~~~~~~~~
      |           |        |
      |           char *   char (*)[30]
exercises.c:65:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   65 |   scanf("%s[29\n]",&p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
734af9e
Fri 17 Mar 2023 11:28:12 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:11: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
   65 |   scanf("%s[29\n]",*p->nombre);
      |          ~^        ~~~~~~~~~~
      |           |        |
      |           char *   int
exercises.c:67:11: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
   67 |   scanf("%s[10\n]",*p->rut);
      |          ~^        ~~~~~~~
      |           |        |
      |           char *   int
exercises.c:65:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   65 |   scanf("%s[29\n]",*p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:67:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   67 |   scanf("%s[10\n]",*p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:65:20: error: ‘*p.nombre[0]’ is used uninitialized [-Werror=uninitialized]
   65 |   scanf("%s[29\n]",*p->nombre);
      |                    ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7df272
